--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .App {
-  text-align: center;
+    font-family: sans-serif;
+    text-align: center;
+    padding-top: 100px;
+    background: #392767;
+    min-height: 100vh;
+    color: #e5daff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    margin-bottom: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.number-inputs {
+    margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+    font-size: 80px;
+    border-radius: 10px;
+    border: 1px solid #d2c0fd;
+    width: 25%;
+    padding: 10px;
+    text-align: center;
+    background: #d2c0fd;
+    color: #2a1263;
 }
 
-.App-link {
-  color: #61dafb;
+input:first-child {
+    margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    padding: 30px 40px;
+    font-size: 30px;
+    border-radius: 20px 40px;
+    background: #5f30e6;
+    border: none;
+    margin-bottom: 50px;
+    color: #d7cbf7;
+    cursor: pointer;
+}
+
+h2 {
+    font-size: 150px;
 }
